// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem: should render custom left padding 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight and secondary text 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        secondary={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render custom left padding with light font weight, secondary text and onclick function 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        light={true}
        secondary={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon 1`] = `
<div
  className="root"
>
  <div
    className="listItemIcon"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      type="education"
    />
  </div>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in compact mode 1`] = `
<div
  className="root compact"
>
  <div
    className="listItemIcon"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      type="education"
    />
  </div>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={true}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon in hasHoverState mode 1`] = `
<div
  className="root hasHoverState"
>
  <div
    className="listItemIcon"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      type="education"
    />
  </div>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render icon with badge with hasHoverState and compact mode 1`] = `
<div
  className="root hasHoverState compact"
>
  <div
    className="listItemIcon"
  >
    <Icon
      animation=""
      rotation=""
      size=""
      smoothRotate={false}
      type="education"
    />
  </div>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={true}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={true}
        semiStrong={false}
      >
        testValue
      </Text>
      <span
        className="listItemBadge"
      >
        <Badge
          color="default"
          isBold={true}
          label="badge"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render title value 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <Text
      baseline={false}
      className="listItemTitle"
      intimate={false}
      light={true}
    >
      testTitle
    </Text>
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render value 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;

exports[`ListItem: should render with className 1`] = `
<div
  className="root"
>
  <div
    className="listItemContent"
  >
    <div
      className="listItemValue"
    >
      <Text
        baseline={false}
        className="displayInline"
        intimate={false}
        semiStrong={false}
      >
        testValue
      </Text>
    </div>
  </div>
</div>
`;
